feat: optimize how to use document and official document; add data statistic; add setAudioRoute interface

--- a/Api-Example/package.json
+++ b/Api-Example/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
+  "dependencies": {
+    "aegis-weex-sdk": "^1.24.46"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
