--- a/SDK/package.json
+++ b/SDK/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "TrtcCloud",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "directories": {
-    "doc": "docs",
-    "lib": "lib",
-    "test": "test"
-  },
-  "scripts": {
-  },
-  "devDependencies": {},
-  "dependencies": {
-    "typescript": "^4.6.2"
-  },
-  "author": "",
-  "license": "ISC"
+    "name": "TrtcCloud",
+    "version": "1.0.2",
+    "description": "Real-time audio and video SDK for uni-app",
+    "main": "index.js",
+    "directories": {
+        "doc": "docs",
+        "lib": "lib",
+        "test": "test"
+    },
+    "repository": {
+    "type": "git",
+        "url": "https://github.com/LiteAVSDK/TRTC_UniApp.git"
+    },
+    "author": "",
+    "license": "ISC"
 }
