--- a/Api-Example/manifest.json
+++ b/Api-Example/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "Api-Example",
-    "appid" : "__UNI__ECADA0C",
+    "appid" : "__UNI__1EDAD4F",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
@@ -32,10 +32,15 @@
                     "<uses-permission android:name=\"android.permission.CHANGE_WIFI_STATE\"/>",
                     "<uses-permission android:name=\"android.permission.FLASHLIGHT\"/>",
                     "<uses-permission android:name=\"android.permission.GET_ACCOUNTS\"/>",
+                    "<uses-permission android:name=\"android.permission.HARDWARE_TEST\"/>",
+                    "<uses-permission android:name=\"android.permission.MODIFY_AUDIO_SETTINGS\"/>",
+                    "<uses-permission android:name=\"android.permission.MOUNT_FORMAT_FILESYSTEMS\"/>",
                     "<uses-permission android:name=\"android.permission.MOUNT_UNMOUNT_FILESYSTEMS\"/>",
-                    "<uses-permission android:name=\"android.permission.READ_LOGS\"/>",
+                    "<uses-permission android:name=\"android.permission.PROCESS_OUTGOING_CALLS\"/>",
                     "<uses-permission android:name=\"android.permission.READ_PHONE_STATE\"/>",
+                    "<uses-permission android:name=\"android.permission.READ_USER_DICTIONARY\"/>",
                     "<uses-permission android:name=\"android.permission.RECORD_AUDIO\"/>",
+                    "<uses-permission android:name=\"android.permission.SET_DEBUG_APP\"/>",
                     "<uses-permission android:name=\"android.permission.VIBRATE\"/>",
                     "<uses-permission android:name=\"android.permission.WAKE_LOCK\"/>",
                     "<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"
@@ -48,7 +53,8 @@
                     "NSPhotoLibraryAddUsageDescription" : "app 想访问你的相册",
                     "NSCameraUsageDescription" : "app 想访问你的摄像头",
                     "NSMicrophoneUsageDescription" : "app 想访问你的麦克风"
-                }
+                },
+                "dSYMs" : false
             },
             /* SDK配置 */
             "sdkConfigs" : {
